project(game)

set(TARGET_TYPE "StaticLibrary")
include(${CMAKE_SOURCE_DIR}/cmake/BuildOptions.cmake)

set(SRC_FILES
    "2daProperties.cpp"
    "abilities.cpp"
    "actionAreaComponent.cpp"
    "actionAreaComponentEditorData.cpp"
    "actionAreaVertex.cpp"
    "actionBroadecastEvent.cpp"
    "actionPoint.cpp"
    "actionPointActivationSwitcher.cpp"
    "actionPointComponent.cpp"
    "actionPointDataDef.cpp"
    "actionPointManager.cpp"
    "actionPointReservationReleaseHandler.cpp"
    "actionPointSelectors.cpp"
    "actor.cpp"
    "actorAction.cpp"
    "actorActionAnimation.cpp"
    "actorActionChangeEmotion.cpp"
    "actorActionCustomSteer.cpp"
    "actorActionExploration.cpp"
    "actorActionMatchTo.cpp"
    "actorActionMoveOnCurveTo.cpp"
    "actorActionMoveOutsideNavdata.cpp"
    "actorActionMoveTo.cpp"
    "actorActionMoveToDynamicNode.cpp"
    "actorActionRiseEvent.cpp"
    "actorActionRotateTo.cpp"
    "actorActionSlideTo.cpp"
    "actorActionWork.cpp"
    "actorAnimationEventFilter.cpp"
    "actorLatentAction.cpp"
    "actorSpeechQueue.cpp"
    "aiScriptableStorage.cpp"
    "behTreeDecoratorAfraidDefinition.cpp"
    "behTreeConditionRespondToMusicDefinition.cpp"
    "behTreeNodeAtomicPlayAnimationManualMotionExtraction.cpp"
    "debugPageScenes.cpp"
    "dlcLanguagePack.cpp"
    "gameWallaInterface.cpp"
    "questColorblindModeCondition.cpp"
    "questEncounterFullRespawnBlock.cpp"
    "questJournalStatusCondition.cpp"
    "questPhaseIOBlock.cpp"
    "saveFileDLCMounter.cpp"
    "storySceneEventLodOverride.cpp"
    "storySceneEventVideoOverlay.cpp"
    "templateLoadBalancer.cpp"
    "actor_scenes.cpp"
    "actor_scripts.cpp"
    "aiParametersSpawnList.cpp"
    "aiPositionPrediction.cpp"
    "aiQueryWalkableSpotInArea.cpp"
    "aiReachabilityQuery.cpp"
    "asyncCheckResult.cpp"
    "behaviorPoseConstraintPoseLookAtModifier.cpp"
    "Behavior/BehaviorNodes/Measurements/behaviorGraphFootStepDetectorNode.cpp"
    "Behavior/PostActions/behaviorGraphPostActions.cpp"
    "behTreeAreaSelection.cpp"
    "behTreeDecoratorAsyncQuery.cpp"
    "behTreeDecoratorSemaphore.cpp"
    "behTreeDecoratorSemaphorePriority.cpp"
    "behTreeDecoratorSteeringTargeter.cpp"
    "behTreeDecoratorWalkablePositionQuery.cpp"
    "behTreeMetanodeGuardSetup.cpp"
    "behTreeNodeAtomicAction.cpp"
    "behTreeNodeCasualMovementDecorator.cpp"
    "behTreeNodeConditionChance.cpp"
    "behTreeNodeConditionExternalToggle.cpp"
    "behTreeNodeConditionHasTarget.cpp"
    "behTreeNodeConditionIsAtWork.cpp"
    "behTreeNodeConditionIsInCameraView.cpp"
    "behTreeNodeConditionIsInGuardArea.cpp"
    "behTreeNodeConditionLineofSight.cpp"
    "behTreeNodeConditionNoticedObject.cpp"
    "behTreeNodeConditionTrue.cpp"
    "behTreeMetaNodeNpcTypeCondition.cpp"
    "behTreeNodeLookat.cpp"
    "behTreeNodePartyWorkSynchronizer.cpp"
    "behTreeNodeSelectRandomPositionInAreaDecorator.cpp"
    "behTreeNodeSelectTargetByTagInArea.cpp"
    "behTreeNodeSnapToNavigation.cpp"
    "behTreeNodeUseExplorationAction.cpp"
    "behTreeWalkableQueryData.cpp"
    "boatBuoyancySystem.cpp"
    "boatConfig.cpp"
    "boatHedgehog.cpp"
    "boatInputSystem.cpp"
    "boatPathfindingSystem.cpp"
    "communityAgentStubTagManager.cpp"
    "container.cpp"
    "createEntityHelper.cpp"
    "createEntityManager.cpp"
    "debugPageCamera.cpp"
    "debugPageGameShortcuts.cpp"
    "debugPageLayerStorage.cpp"
    "dlcDefinition.cpp"
    "dlcManager.cpp"
    "dlcMounter.cpp"
    "edWizardSavedAnswers.cpp"
    "behTreeStateSerializer.cpp"
    "encounterSpawnGroupCounter.cpp"
    "actorsManager.cpp"
    "actorSpeech.cpp"
    "addFactPerformableAction.cpp"
    "advancedVehicle.cpp"
    "agent.cpp"
    "agentsWorld.cpp"
    "aiActionParameters.cpp"
    "aiDespawnParameters.cpp"
    "aiFormationData.cpp"
    "aiExplorationParameters.cpp"
    "aiParamInjectHandler.cpp"
    "aiPositioning.cpp"
    "aiPresetParam.cpp"
    "aiRedefinitionParameters.cpp"
    "behTreeDecoratorCompleteInProximity.cpp"
    "behTreeDecoratorLeadFormation.cpp"
    "behTreeDecoratorPoke.cpp"
    "behTreeDecoratorSetupFormation.cpp"
    "behTreeDynamicNodeBase.cpp"
    "behTreeGuardAreaData.cpp"
    "behTreeNodeAtomicMoveToWanderpoint.cpp"
    "behTreeNodeAttachToCurve.cpp"
    "behTreeNodeComment.cpp"
    "behTreeNodeConditionPartyMembersCount.cpp"
    "behTreeNodeConditionRecentEvent.cpp"
    "behTreeNodeConditionSpeedEngineVal.cpp"
    "behTreeNodeExplorationQueue.cpp"
    "behTreeNodeFleeReaction.cpp"
    "behTreeNodePassMetaobstacles.cpp"
    "behTreeNodeSelectFormationLeader.cpp"
    "behTreeNodeSelectPartyMember.cpp"
    "behTreeNodeSetupCustomMoveData.cpp"
    "behTreeNodeWorkDecorator.cpp"
    "behTreeVarsUtils.cpp"
    "encounterSpawnPoints.cpp"
    "entityPool.cpp"
    "entityPoolSpawnJobFactory.cpp"
    "expCooked.cpp"
    "expCooking.cpp"
    "expMountBoatExecutor.cpp"
    "extAnimMaterialBasedFxEvent.cpp"
    "factsDebuggerCommands.cpp"
    "factsDebuggerPlugin.cpp"
    "findGameplayEntities.cpp"
    "gameDebuggerCommands.cpp"
    "gameDebuggerPlugin.cpp"
    "gameFastForwardSystem.cpp"
    "gameMetalinkFactories.cpp"
    "gameplayInfoCache.cpp"
    "gameplayStorageAcceptors.cpp"
    "gameSpeedConfigManager.cpp"
    "guiScenePlayer.cpp"
    "inGameConfigDLC.cpp"
    "inGameConfigWrapper.cpp"
    "interpolationBasics.cpp"
    "isConsciousAtWork.cpp"
    "moveAnimationLocomotionSegment.cpp"
    "moveSteeringMaintainTargetSpeed.cpp"
    "moveSteeringSpatialQueriesConditions.cpp"
    "moveSteeringSpeedMultOnPath.cpp"
    "navigationCollectCollision.cpp"
    "navigationMultiReachabilityQueryInterface.cpp"
    "newNpcSensesManager.cpp"
    "popup.cpp"
    "popupResource.cpp"
    "propertyConverter.cpp"
    "questContentActivatorBlock.cpp"
    "questDebuggerCommands.cpp"
    "questDebuggerPlugin.cpp"
    "questDependencyInfo.cpp"
    "questFastForwardCommunitiesBlock.cpp"
    "questLoadingScreenCondition.cpp"
    "questLogStateBlock.cpp"
    "questLookAtBlock.cpp"
    "questMemoryDumpBlock.cpp"
    "questPerformGCBlock.cpp"
    "questTestBlock.cpp"
    "questWaitForTickBlock.cpp"
    "rewardManager.cpp"
    "roadsManager.cpp"
    "sceneStopReasons.cpp"
    "scriptedRenderFrame.cpp"
    "spawnTreeDecoratorInitializersList.cpp"
    "spawnTreeInitializationContext.cpp"
    "spawnTreeInitializerMonitor.cpp"
    "spawnTreeInitializerPersistent.cpp"
    "spawnTreeInitializerRainHandler.cpp"
    "spawnTreeInitializerSetupDetachedCollection.cpp"
    "spawnTreeInitializerSpawnLimitMonitor.cpp"
    "spawnTreeInitializerStartingBehavior.cpp"
    "spawnTreeInitializerToggleBehavior.cpp"
    "spawnTreeSpawnStrategy.cpp"
    "speedManagmentSteeringTasks.cpp"
    "storySceneAddFactEvent.cpp"
    "storySceneEventAttachPropToBone.cpp"
    "storySceneEventCameraAnimation.cpp"
    "StorySceneEventCameraLight.cpp"
    "storySceneEventCameraLightInterpolation.cpp"
    "storySceneEventCloth.cpp"
    "storySceneEventClothDisablingInterpolation.cpp"
    "storySceneEventCsCamera.cpp"
    "storySceneEventDangle.cpp"
    "storySceneEventDangleInterpolation.cpp"
    "spawnTreeStateSerializer.cpp"
    "storySceneEventDebugComment.cpp"
    "storySceneEventGameplayCamera.cpp"
    "storySceneEventHideScabbard.cpp"
    "storySceneEventHitSound.cpp"
    "storySceneEventInterpolation.cpp"
    "storySceneEventCameraInterpolation.cpp"
    "boatDestructionComponent.cpp"
    "headManagerComponent.cpp"
    "character.cpp"
    "characterResource.cpp"
    "configParser.cpp"
    "debugWindowBoatSettings.cpp"
    "debugWindowGameWorld.cpp"
    "debugWindowNPCViewer.cpp"
    "debugWindow.cpp"
    "debugWindowVehicleViewer.cpp"
    "distanceChecker.cpp"
    "doorAttachment.cpp"
    "edEntitySetup.cpp"
    "edEntitySetupListParam.cpp"
    "enableComponentsPerfomableAction.cpp"
    "entitiesDetector.cpp"
    "entityUpdaterComponent.cpp"
    "formationLogicSlot.cpp"
    "formationLogicSteering.cpp"
    "formationMemberDataSlot.cpp"
    "formationMemberDataSteering.cpp"
    "formationPattern.cpp"
    "formationSlot.cpp"
    "formationSteeringSlotTasks.cpp"
    "fxTrackItemPlayPropertyAnim.cpp"
    "jobBreakerComponent.cpp"
    "jobSpawnFromPool.cpp"
    "lockableEntity.cpp"
    "doorComponent.cpp"
    "effectManagmentPerformableAction.cpp"
    "enableDeniedAreaAction.cpp"
    "enableEncounterPerformableAction.cpp"
    "entityActionsRouter.cpp"
    "entityEventsNamesProvider.cpp"
    "entityTargetingAction.cpp"
    "formation.cpp"
    "aiSpawnTreeParameters.cpp"
    "aiStorage.cpp"
    "aiStorageExternalPtr.cpp"
    "animationManualSlotSync.cpp"
    "animationSlider.cpp"
    "animEffectEvent.cpp"
    "atomicBoidNode.cpp"
    "baseBoidNode.cpp"
    "behaviorConstraintApplyOffset.cpp"
    "behaviorConstraintNodeFloorIK.cpp"
    "behaviorConstraintRiderInSaddle.cpp"
    "behaviorConstraintUprightSpine.cpp"
    "behaviorConstraintPutLegsIntoStirrups.cpp"
    "behaviorConstraintPullStirrupsToLegs.cpp"
    "behaviorConstraintPullReinsToHands.cpp"
    "behaviorConstraintMoveHandsByOffset.cpp"
    "behaviorConstraintStirrups.cpp"
    "behaviorGraphAimingWithIKNode.cpp"
    "behaviorGraphMaintainVelocityNode.cpp"
    "behaviorGraphRagdollNode.cpp"
    "behaviorGraphAnimatedRagdollNode.cpp"
    "behaviorGraphDirectionalMovementNode.cpp"
    "behaviorGraphGameplayTransitions.cpp"
    "behaviorGraphChangeDirectionNode.cpp"
    "behaviorGraphFillMovementVariablesUsingSteeringNode.cpp"
    "behaviorGraphOnSlopeMovementNode.cpp"
    "behTreeAtomicConditions.cpp"
    "behTreeAtomicSteerWithTarget.cpp"
    "behTreeCounterData.cpp"
    "behTreeCustomMoveData.cpp"
    "behTreeDecoratorDuration.cpp"
    "baseCrittersAI.cpp"
    "behTreeDecoratorSelectFleeDestination.cpp"
    "behTreeDecoratorSteeringGraph.cpp"
    "behTreeNodeConditionClearLineToTarget.cpp"
    "behTreeNodeDespawn.cpp"
    "behTreeDynamicNode.cpp"
    "behTreeMetanode.cpp"
    "behTreeMetanodeOnSpawn.cpp"
    "behTreeNodeAtomicGuardRetreat.cpp"
    "behTreeDecoratorUninterruptable.cpp"
    "behTreeNodeAtomicTeleport.cpp"
    "behTreeNodeComplexCondition.cpp"
    "behTreeNodeConditionCounter.cpp"
    "behTreeNodeConditionReactionEvent.cpp"
    "behTreeNodeFollowFormation.cpp"
    "behTreeNodeIdleRoot.cpp"
    "behTreeNodeSelectWanderingTarget.cpp"
    "behTreeNodeSpecial.cpp"
    "behTreeNodeVoid.cpp"
    "behTreeReactionData.cpp"
    "behTreeReactionManager.cpp"
    "behTreeRttiAtomic.cpp"
    "behTreeRttiCommunity.cpp"
    "behTreeRttiComposites.cpp"
    "behTreeRttiCustom.cpp"
    "behTreeRttiDecorators.cpp"
    "behTreeRttiMovement.cpp"
    "behTreeRttiStructural.cpp"
    "behTreeSteeringGraphBase.cpp"
    "behTreeNodeWorkAtomic.cpp"
    "behTreeTask.cpp"
    "behTreeWorkData.cpp"
    "behTreeWorkInitializer.cpp"
    "boatComponent.cpp"
    "boidNodeData.cpp"
    "attackRange.cpp"
    "attitude.cpp"
    "attitudeManager.cpp"
    "baseDamage.cpp"
    "behaviorGraphEventHandler.cpp"
    "behaviorGraphGameplayAdditiveNode.cpp"
    "behaviorGraphGameplayNodes.cpp"
    "behaviorGraphScriptStateNode.cpp"
    "behaviorGraphStoreBone.cpp"
    "behaviorGraphStoreSyncInfo.cpp"
    "behaviorGraphRestoreSyncInfo.cpp"
    "behaviorPoseConstraintPoseLookAtNode.cpp"
    "behTreeNodeSelectPatrolingTarget.cpp"
    "bgNpc.cpp"
    "bgNpcChatPlayer.cpp"
    "bgNpcInteraction.cpp"
    "bgNpcItem.cpp"
    "bgNpcJobPlayer.cpp"
    "bgNpcMesh.cpp"
    "bgNpcRoot.cpp"
    "bgNpcSpeech.cpp"
    "bgNpcTrigger.cpp"
    "boidActivationTriggerComponent.cpp"
    "boidAreaComponent.cpp"
    "cameraAreaComponent.cpp"
    "cameraEffectTrigger.cpp"
    "boidManager.cpp"
    "characterStats.cpp"
    "commonGameResource.cpp"
    "communityAgentStub.cpp"
    "communityArea.cpp"
    "communityConstants.cpp"
    "communityData.cpp"
    "communityDebugCounters.cpp"
    "communityErrorReport.cpp"
    "communitySystem.cpp"
    "communityThreadSlicer.cpp"
    "communityUtility.cpp"
    "counterUtilityGraphBlock.cpp"
    "formationMemberData.cpp"
    "formationLogic.cpp"
    "formationSteeringConditions.cpp"
    "formationSteeringInput.cpp"
    "formationSteeringTasks.cpp"
    "generalMoveSteeringTask.cpp"
    "gameNames.cpp"
    "journalBase.cpp"
    "journalBlock.cpp"
    "journalManager.cpp"
    "journalPath.cpp"
    "journalResource.cpp"
    "boatDestructionVolume.cpp"
    "metalinkComponent.cpp"
    "movementCommandBuffer.cpp"
    "moveSteeringSideBySide.cpp"
    "partySpawnPointComponent.cpp"
    "partySpawnPointOrganizer.cpp"
    "pilotComponent.cpp"
    "playPropertyAnimationAction.cpp"
    "questEncounterActivator.cpp"
    "questEncounterManagerBlock.cpp"
    "gameplayDestructionSystemComponent.cpp"
    "questGraphMinigameBlock.cpp"
    "questPokeActionBlock.cpp"
    "reactionScene.cpp"
    "reactionSceneActor.cpp"
    "reactionSceneAssignActorNode.cpp"
    "reactionSceneAssignments.cpp"
    "reactionSceneEndNode.cpp"
    "reactionSceneFlowController.cpp"
    "reactionSceneFlowSynchronizationDecorator.cpp"
    "sceneAnimEvents.cpp"
    "sceneDefinitionNode.cpp"
    "queueMetalinkInterface.cpp"
    "seatComponent.cpp"
    "selfUpdatingComponent.cpp"
    "spawnTreeBaseEntry.cpp"
    "spawnTreeBaseEntryGenerator.cpp"
    "spawnTreeEntryListElement.cpp"
    "spawnTreeInitializerAddTag.cpp"
    "spawnTreeInitializerAI.cpp"
    "spawnTreeInitializerAttitude.cpp"
    "spawnTreeInitializerSetAppearance.cpp"
    "spawnTreeInitializerForceCombat.cpp"
    "spawnTreeInitializerGuardArea.cpp"
    "spawnTreeInitializersIdleAI.cpp"
    "spawnTreeMultiEntry.cpp"
    "spawnTreeDespawnerHandler.cpp"
    "spawnTreeRandomNode.cpp"
    "spawnTreeScriptedNode.cpp"
    "spawnTreeVoidNode.cpp"
    "spawnTreeWanderAndWorkEntryGenerator.cpp"
    "storySceneActorsEyesTracker.cpp"
    "storySceneEventCamera.cpp"
    "storySceneEventChangeActorGameState.cpp"
    "storySceneEventControlRig.cpp"
    "storySceneEventDialogLine.cpp"
    "storySceneControlPartsUtil.cpp"
    "storySceneEffectEvent.cpp"
    "storySceneEventBlend.cpp"
    "storySceneEventCurveAnimation.cpp"
    "storySceneEventEnhancedCameraBlend.cpp"
    "storySceneEventInterfaces.cpp"
    "storySceneEventLightProperties.cpp"
    "storySceneEventLightPropertiesInterpolation.cpp"
    "storySceneEventModifyEnv.cpp"
    "storySceneEventMorphInterpolation.cpp"
    "storySceneEventOpenDoor.cpp"
    "storySceneEventPlacementInterpolation.cpp"
    "storySceneEventPoseKey.cpp"
    "storySceneEventPropPlacementInterpolation.cpp"
    "storySceneEventReward.cpp"
    "storySceneEventScenePropPlacement.cpp"
    "storySceneEventsCollector.cpp"
    "encounter.cpp"
    "encounterCreatureDefinition.cpp"
    "lootCache.cpp"
    "lootDefinitions.cpp"
    "questEncounterPhaseSetterBlock.cpp"
    "spawnTreeCompositeMember.cpp"
    "spawnCondition.cpp"
    "encounterCreaturePool.cpp"
    "spawnTreeConditionNode.cpp"
    "spawnTreeCustomSet.cpp"
    "spawnTreeDespawnConfiguration.cpp"
    "spawnTreeDespawnInitializer.cpp"
    "spawnTreeEntry.cpp"
    "spawnTreeIncludeNode.cpp"
    "spawnTreeInitializer.cpp"
    "spawnTreeInitializerSpawner.cpp"
    "spawnTreeNode.cpp"
    "flashMovieAdapter.cpp"
    "flashProxyComponent.cpp"
    "flashScriptFunctionCalling.cpp"
    "flashScriptSupport.cpp"
    "flashBindingAdapter.cpp"
    "flashSpriteAdapter.cpp"
    "boatBodyComponent.cpp"
    "guiConfigResource.cpp"
    "guiManager.cpp"
    "guiObject.cpp"
    "guiResource.cpp"
    "hud.cpp"
    "flashHudAdapter.cpp"
    "hudResource.cpp"
    "hudModule.cpp"
    "loopBoidNode.cpp"
    "animBoidNode.cpp"
    "menu.cpp"
    "menuResource.cpp"
    "movementAdjustor.cpp"
    "moveMatchToSegment.cpp"
    "poiJobData.cpp"
    "pointOfInterestSpeciesConfig.cpp"
    "ProjectileTrajectory.cpp"
    "ProjectileTargets.cpp"
    "questEntityMotionBlock.cpp"
    "questScriptedActionsAIParameters.cpp"
    "randBoidNode.cpp"
    "boidPointOfInterestComponentScript.cpp"
    "reactionCondition.cpp"
    "scriptedComponent.cpp"
    "scriptRegistrationManager.cpp"
    "sequenceBoidNode.cpp"
    "edSpawnTreeNode.cpp"
    "spawnTree.cpp"
    "spawnTreeSpawner.cpp"
    "storySceneDebugger.cpp"
    "storySceneDisplayInterface.cpp"
    "storySceneEventsExecutor.cpp"
    "storySceneAnimationList.cpp"
    "storySceneEventsExecutor_animations.cpp"
    "storySceneEventsExecutor_lights.cpp"
    "storySceneEventsExecutor_lookats.cpp"
    "storySceneEventsExecutor_motions.cpp"
    "storySceneEventsExecutor_props.cpp"
    "storySceneEventStartBlendToGameplayCamera.cpp"
    "storySceneEventTimelapse.cpp"
    "StorySceneEventWorldEntityEffect.cpp"
    "storySceneEventWorldPropPlacement.cpp"
    "storySceneFlowSwitch.cpp"
    "storySceneFlowSwitchBlock.cpp"
    "storySceneIncludes.cpp"
    "storySceneInterceptionHelper.cpp"
    "storySceneItems.cpp"
    "storySceneLinkHub.cpp"
    "storySceneLookAtController.cpp"
    "storySceneMotionExtractionSampler.cpp"
    "storySceneNPCTeleport.cpp"
    "storyScenePlayerStats.cpp"
    "storyScenePlayer_tick.cpp"
    "storySceneSectionVariant.cpp"
    "storySceneUtils.cpp"
    "storySceneVoiceTagsManager.cpp"
    "strayActorManager.cpp"
    "swarmAlgorithmData.cpp"
    "swarmUpdateJob.cpp"
    "debugPageBehaviorTree.cpp"
    "debugPageCommunity.cpp"
    "debugPageFactsDB.cpp"
    "debugPageMemoryBudget.cpp"
    "debugPageMemoryBudgetCommands.cpp"
    "debugPageMenu.cpp"
    "debugPageNpcList.cpp"
    "debugPageQuestForcer.cpp"
    "debugPageQuests.cpp"
    "debugPageQuestsDebug.cpp"
    "debugPageWorld.cpp"
    "deniedAreaSaveable.cpp"
    "entityParams.cpp"
    "expAnimationBlendPicker.cpp"
    "expBaseExecutor.cpp"
    "expBlendExecutor.cpp"
    "expBlendChainExecutor.cpp"
    "expChainExecutor.cpp"
    "expComponent.cpp"
    "expEvents.cpp"
    "explorationFinder.cpp"
    "foundExplorationComponent.cpp"
    "explorationScriptSupport.cpp"
    "expManager.cpp"
    "expManualStatesExecutor.cpp"
    "expOracle.cpp"
    "expPlayer.cpp"
    "expSingleAnimExecutor.cpp"
    "expSlideExecutor.cpp"
    "expSlider.cpp"
    "expStatesExecutor.cpp"
    "expStepsExecutor.cpp"
    "expToPointSliderExecutor.cpp"
    "expTransitionExecutor.cpp"
    "expTraverser.cpp"
    "expTreeMediator.cpp"
    "extAnimCutsceneQuestEvent.cpp"
    "equipmentState.cpp"
    "extAnimFootstepEvent.cpp"
    "extAnimGameplayMimicEvent.cpp"
    "extAnimItemEvents.cpp"
    "extAnimSoundEvent.cpp"
    "extAnimOnSlopeEvent.cpp"
    "extAnimLocationAdjustmentEvent.cpp"
    "extAnimRotationAdjustmentEvent.cpp"
    "extAnimRotationAdjustmentLocationBasedEvent.cpp"
    "definitionsManager.cpp"
    "fxTrackItemPlayItemEffect.cpp"
    "gameplayStorage.cpp"
    "aiParameters.cpp"
    "aiProfile.cpp"
    "behTree.cpp"
    "behTreeDecorator.cpp"
    "behTreeDecoratorActivePriority.cpp"
    "behTreeDecoratorDelay.cpp"
    "behTreeEventParams.cpp"
    "behTreeInstance.cpp"
    "behTreeMachine.cpp"
    "behTreeNode.cpp"
    "behTreeNodeArbitrator.cpp"
    "behTreeNodeAtomicDamageReaction.cpp"
    "behTreeNodeAtomicIdle.cpp"
    "behTreeNodeAtomicMove.cpp"
    "behTreeNodeAtomicPlayAnimation.cpp"
    "behTreeNodeAtomicPlayAnimationEvent.cpp"
    "behTreeNodeAtomicPursue.cpp"
    "behTreeNodeAtomicRotate.cpp"
    "behTreeNodeComposite.cpp"
    "behTreeNodeCondition.cpp"
    "behTreeNodeConditionCheckRotationToTarget.cpp"
    "behTreeNodeConditionDistanceToTarget.cpp"
    "behTreeNodeConditionIsInAttackRange.cpp"
    "behTreeNodeCustomSteering.cpp"
    "behTreeNodeFinishAnimations.cpp"
    "behTreeNodeForced.cpp"
    "behTreeNodeKeepDistance.cpp"
    "behTreeNodeLoop.cpp"
    "behTreeNodeParallel.cpp"
    "behTreeNodePerformWork.cpp"
    "behTreeNodePlayScene.cpp"
    "behTreeNodePredefinedPath.cpp"
    "behTreeNodeQuestActions.cpp"
    "behTreeNodeRandom.cpp"
    "behTreeNodeSelectActionPoint.cpp"
    "behTreeNodeSelector.cpp"
    "behTreeNodeSelectTargetByTag.cpp"
    "behTreeNodeSequence.cpp"
    "behTreeNodeTemplate.cpp"
    "behTreeRtti.cpp"
    "behTreeScriptedNode.cpp"
    "behTreeVars.cpp"
    "behTreeVarsEnums.cpp"
    "boidInstance.cpp"
    "boidPointOfInterestComponent.cpp"
    "boidLairEntity.cpp"
    "swarmSound.cpp"
    "build.cpp"
    "commonGame.cpp"
    "extAnimProjectileEvent.cpp"
    "gameClasses.cpp"
    "factsDB.cpp"
    "factsDBEditorQuery.cpp"
    "gameplayEntity.cpp"
    "gameplayWindComponent.cpp"
    "gameSaver.cpp"
    "gameSystem.cpp"
    "gameWorld.cpp"
    "interactionArea.cpp"
    "interactionComponent.cpp"
    "interactionsManager.cpp"
    "interactionToComponentComponent.cpp"
    "interactionTooltipComponent.cpp"
    "interestPointComponent.cpp"
    "inventoryComponent.cpp"
    "inventoryDefinition.cpp"
    "inventoryEditor.cpp"
    "inventoryItem.cpp"
    "itemEntity.cpp"
    "itemUniqueId.cpp"
    "itemVisibilityController.cpp"
    "jobTree.cpp"
    "jobTreeLeaf.cpp"
    "jobTreeNode.cpp"
    "lookAtController.cpp"
    "lookAtParam.cpp"
    "minigame.cpp"
    "movableRepresentation.cpp"
    "movableRepresentationEntity.cpp"
    "movableRepresentationPathAgent.cpp"
    "movableRepresentationPhysicalCharacter.cpp"
    "movableRepresentationsStack.cpp"
    "moveCurveLocomotionSegment.cpp"
    "moveGlobalPathPlanner.cpp"
    "moveLocomotion.cpp"
    "movementGoal.cpp"
    "movementObject.cpp"
    "movementTargeter.cpp"
    "moveNavigationPath.cpp"
    "movePathIterator.cpp"
    "moveSlideLocomotionSegment.cpp"
    "moveStateModifier.cpp"
    "moveSteeringBehavior.cpp"
    "moveSteeringCondition.cpp"
    "moveSteeringLocomotionSegment.cpp"
    "moveSteeringNode.cpp"
    "moveSteeringTask.cpp"
    "movingAgentComponent.cpp"
    "movingPhysicalAgentComponent.cpp"
    "newNpc.cpp"
    "newNpcNoticedObject.cpp"
    "newNpcSchedule.cpp"
    "newNpcSense.cpp"
    "newNpcSenses.cpp"
    "newNpcSenseVision.cpp"
    "newNpcState.cpp"
    "newNpcStateIdle.cpp"
    "newNpcStateMachine.cpp"
    "nodeStorage.cpp"
    "patrolPointComponent.cpp"
    "player.cpp"
    "oldCommunitySpawnStrategy.cpp"
    "playerStateBase.cpp"
    "playerStateMovable.cpp"
    "potentialField.cpp"
    "quest.cpp"
    "questActorCondition.cpp"
    "questAndBlock.cpp"
    "questBlockWithScene.cpp"
    "questCamera.cpp"
    "questCameraFocusCondition.cpp"
    "questCharacterCustomizerBlock.cpp"
    "questCheckpointBlock.cpp"
    "questCondition.cpp"
    "questConditionBlock.cpp"
    "questContextDialogBlock.cpp"
    "questCutControlBlock.cpp"
    "questCutsceneCondition.cpp"
    "questDeletionMarkerBlock.cpp"
    "questEndBlock.cpp"
    "questExternalScenePlayer.cpp"
    "questFactsDBChangingBlock.cpp"
    "questFactsDBCondition.cpp"
    "questFightCondition.cpp"
    "questGameplayEntCondition.cpp"
    "questGraph.cpp"
    "questGraphBlock.cpp"
    "questGraphInstance.cpp"
    "questGraphSocket.cpp"
    "questInteractionCondition.cpp"
    "questInteractionDialogBlock.cpp"
    "questInterestPointBlock.cpp"
    "questLayersHiderBlock.cpp"
    "questLockNPC.cpp"
    "questPauseConditionBlock.cpp"
    "questPhase.cpp"
    "questPhaseBlock.cpp"
    "questPhaseInputBlock.cpp"
    "questPhaseOutputBlock.cpp"
    "questRandomBlock.cpp"
    "questReactionCondition.cpp"
    "questRewardBlock.cpp"
    "questsAnalyzer.cpp"
    "questSceneBlock.cpp"
    "questSceneBlocksValidator.cpp"
    "questScenePlayer.cpp"
    "questScenePrepare.cpp"
    "questScopeBlock.cpp"
    "questScriptBlock.cpp"
    "questScriptedActionsBlock.cpp"
    "questScriptedDialogBlock.cpp"
    "questsSystem.cpp"
    "questStartBlock.cpp"
    "questStateChangeRequestResetBlock.cpp"
    "questStaticCameraRun.cpp"
    "questStaticCameraSequence.cpp"
    "questStaticCameraStop.cpp"
    "questStaticCameraSwitch.cpp"
    "questStoryPhaseProperty.cpp"
    "questStoryPhaseSetterBlock.cpp"
    "questTagsPresenceCondition.cpp"
    "questTeleportBlock.cpp"
    "questThread.cpp"
    "questTimeCondition.cpp"
    "questTimeMgmtBlock.cpp"
    "questTriggerCondition.cpp"
    "questUnlockNPC.cpp"
    "questUserInputCondition.cpp"
    "questVariedInputsBlock.cpp"
    "questXorBlock.cpp"
    "reactionAction.cpp"
    "reactionsManager.cpp"
    "rewards.cpp"
    "sceneAreaComponent.cpp"
    "scenesEntriesManager.cpp"
    "scriptGameAnimationNatives.cpp"
    "spawnPointComponent.cpp"
    "spawnPointManager.cpp"
    "spawnStrategy.cpp"
    "standPhysicalMaterialAreaComponent.cpp"
    "storyPhaseListener.cpp"
    "storyPhaseLocation.cpp"
    "storyScene.cpp"
    "storySceneAbstractLine.cpp"
    "storySceneActions.cpp"
    "storySceneActorMap.cpp"
    "storySceneAnimationCache.cpp"
    "storySceneAnimationParams.cpp"
    "storySceneBlockingElement.cpp"
    "storySceneCameraDefinition.cpp"
    "storySceneChoice.cpp"
    "storySceneChoiceLine.cpp"
    "storySceneChoiceLineAction.cpp"
    "storySceneComment.cpp"
    "storySceneComponent.cpp"
    "storySceneControlPart.cpp"
    "storySceneCutscene.cpp"
    "storySceneCutsceneBlock.cpp"
    "storySceneCutsceneSection.cpp"
    "storySceneDialogset.cpp"
    "storySceneDirector.cpp"
    "storySceneDirectorPlacementHelper.cpp"
    "storySceneElement.cpp"
    "storySceneEvent.cpp"
    "storySceneEventAnimation.cpp"
    "storySceneEventAnimClip.cpp"
    "storySceneEventCameraBlend.cpp"
    "storySceneEventChangePose.cpp"
    "storySceneEventCustomCamera.cpp"
    "storySceneEventCustomCameraInstance.cpp"
    "storySceneEventDespawn.cpp"
    "storySceneEventDuration.cpp"
    "storySceneEventEnterActor.cpp"
    "storySceneEventEquipItem.cpp"
    "storySceneEventExitActor.cpp"
    "storySceneEventFade.cpp"
    "storySceneEventGroup.cpp"
    "storySceneEventLookAt.cpp"
    "storySceneEventMimicFilter.cpp"
    "storySceneEventMimicPose.cpp"
    "storySceneEventMimics.cpp"
    "storySceneEventMimicsAnim.cpp"
    "storySceneEventOverridePlacement.cpp"
    "storySceneEventRotate.cpp"
    "storySceneEventSound.cpp"
    "storySceneFlowCondition.cpp"
    "storySceneFlowConditionBlock.cpp"
    "storySceneGraph.cpp"
    "storySceneGraphBlock.cpp"
    "storySceneGraphSocket.cpp"
    "storySceneInput.cpp"
    "storySceneInputBlock.cpp"
    "storySceneLine.cpp"
    "storySceneLinkElement.cpp"
    "storySceneOutput.cpp"
    "storySceneOutputBlock.cpp"
    "storySceneParam.cpp"
    "storyScenePauseElement.cpp"
    "storyScenePlayer.cpp"
    "storySceneRandomBlock.cpp"
    "storySceneRandomizer.cpp"
    "storySceneScriptingBlock.cpp"
    "storySceneScriptLine.cpp"
    "storySceneSection.cpp"
    "storySceneSectionBlock.cpp"
    "storySceneSectionOverrideCondition.cpp"
    "storySceneSectionPlayingPlan.cpp"
    "storySceneSectionPreload.cpp"
    "storySceneSpawner.cpp"
    "storySceneSystem.cpp"
    "storySceneVideo.cpp"
    "storySceneVoicetagMapping.cpp"
    "storySceneWaypointComponent.cpp"
    "swarmLairEntity.cpp"
    "boidSpecies.cpp"
    "targetingUtils.cpp"
    "targetSteeringTask.cpp"
    "teleporter.cpp"
    "teleportHelper.cpp"
    "vehicle.cpp"
    "visualDebug_MovementTrajectory.cpp"
    "voicesetPlayer.cpp"
    "voiceWeightCurve.cpp"
    "wanderPointComponent.cpp"
    "waterDebug.cpp"
    "wayPointComponent.cpp"
    "wayPointCookingContext.cpp"
    "wayPointsCollection.cpp"
    "wayPointsCollectionsSet.cpp"
    "wizardDefinition.cpp"
)

add_library(${PROJECT_NAME} STATIC ${SRC_FILES})

target_include_directories(${PROJECT_NAME} PRIVATE
    ${CMAKE_SOURCE_DIR}/dev/external/gfx4/Src
    ${CMAKE_SOURCE_DIR}/dev/external/gfx4/Include
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/physxvisualdebuggersdk
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/pxtask
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/extensions
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/characterkinematic
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/common
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/foundation
)

target_link_libraries(${PROJECT_NAME})

target_precompile_headers(${PROJECT_NAME}
    PRIVATE
    build.h
)
