project(matcompiler)

set(TARGET_TYPE "StaticLibrary")
include(${CMAKE_SOURCE_DIR}/cmake/BuildOptions.cmake)

set(SRC_FILES
    "mbGammaCorrection.cpp"
    "matClasses.cpp"
    "matNames.cpp"
    "materialCompiler.cpp"
    "materialPixelShaderCompiler.cpp"
    "materialShaderCompiler.cpp"
    "materialVertexShaderCompiler.cpp"
    "legacyBlocks.cpp"
    "mbAmbientLight.cpp"
    "mbCoarseReflection.cpp"
    "mbColorShiftRB.cpp"
    "mbCustomFunction.cpp"
    "mbForwardLight.cpp"
    "mbForwardLightCustom.cpp"
    "mbGlobalFog.cpp"
    "mbGlossinessPack.cpp"
    "mbGradient.cpp"
    "mbLocalReflection.cpp"
    "mbMathAppendVector.cpp"
    "mbMathMapValue.cpp"
    "mbMathSH.cpp"
    "mbMathSplitVector.cpp"
    "mbMathWorldViewRecalculation.cpp"
    "mbNoise.cpp"
    "mbNoise2D.cpp"
    "mbOutputColorEnhanced.cpp"
    "mbOutputColorEye.cpp"
    "mbOutputColorSkin.cpp"
    "mbOutputColorEyeOverlay.cpp"
    "mbOutputVertexModifiers.cpp"
    "mbOutputVolume.cpp"
    "mbPackNormal.cpp"
    "mbSamplerDetail.cpp"
    "mbSamplerNormalArray.cpp"
    "mbSamplerTextureArray.cpp"
    "mbShadowSample.cpp"
    "mbShadowSurfaceDepth.cpp"
    "mbStreamingBlendRatio.cpp"
    "mbTerrainMaterialBlending.cpp"
    "mbTexCoords.cpp"
    "mbVertexColor.cpp"
    "mbVertexFrame.cpp"
    "mbVertexLight.cpp"
    "mbVertexMotionBlend.cpp"
    "mbVertexNormal.cpp"
    "mbVertexPosition.cpp"
    "mbVFace.cpp"
    "mbViewPosition.cpp"
    "mbViewVector.cpp"
    "mbViewZ.cpp"
    "mbVolumeBlend.cpp"
    "mbWetness.cpp"
    "mbWorldBinormal.cpp"
    "mbWorldNormal.cpp"
    "mbWorldPosition.cpp"
    "mbWorldTangent.cpp"
    "mbWorldBasis.cpp"
    "mbMathWorldTangentRecalculation.cpp"
    "mbMathSplitAppendVector.cpp"
    "mbDerivativeNormal.cpp"
    "mbLightingBase.cpp"
    "mbLightingPhong.cpp"
    "mbMathAbs.cpp"
    "mbMathAdd.cpp"
    "mbMathClamp.cpp"
    "mbMathCos.cpp"
    "mbMathDerivativeToNormal.cpp"
    "mbMathDesaturate.cpp"
    "mbMathDiv.cpp"
    "mbMathDot3.cpp"
    "mbMathCross.cpp"
    "mbMathFloor.cpp"
    "mbMathFrac.cpp"
    "mbMathFresnel.cpp"
    "mbMathInterpolate.cpp"
    "mbMathInvert.cpp"
    "mbMathMax.cpp"
    "mbMathMin.cpp"
    "mbMathMultiply.cpp"
    "mbMathNegate.cpp"
    "mbMathNormalize.cpp"
    "mbMathNormalToDerivative.cpp"
    "mbMathPower.cpp"
    "mbMathReflection.cpp"
    "mbMathSaturate.cpp"
    "mbMathSin.cpp"
    "mbMathSubtract.cpp"
    "mbMathTangentToWorld.cpp"
    "mbMathTime.cpp"
    "mbWorldToTangent.cpp"
    "mbSamplerCube.cpp"
    "mbSamplerHeightmap2Normal.cpp"
    "mbSamplerNormal.cpp"
    "mbSamplerNormalDetail.cpp"
    "mbSamplerTexture.cpp"
    "mbSamplerTextureDetail.cpp"
    "mbBlendByDistance.cpp"
    "mbColorShift.cpp"
    "mbCombineNormals.cpp"
    "mbDithering.cpp"
    "mbNormalmapBlend.cpp"
    "mbOutputColor.cpp"
    "mbOutputColorDecalBlended.cpp"
    "mbOutputColorDecalModulative.cpp"
    "mbOutputColorDeferred.cpp"
    "mbOutputColorHair.cpp"
    "mbRenderFeedbackDataFetch.cpp"
    "mbSoftTransparencyAlpha.cpp"
    "mbTexCoordMad.cpp"
    "mbConvertGammaToLinear.cpp"
    "mbConvertLinearToGamma.cpp"
    "mbEnvTransparencyColorFilter.cpp"
    "mbTerrainMaterialSampler.cpp"
    "build.cpp"
    "materialDefaults.cpp"
)

add_library(${PROJECT_NAME} STATIC ${SRC_FILES})

target_include_directories(${PROJECT_NAME} PRIVATE
    ${CMAKE_SOURCE_DIR}/dev/external/gfx4/Src
    ${CMAKE_SOURCE_DIR}/dev/external/gfx4/Include
)

target_link_libraries(${PROJECT_NAME})

target_precompile_headers(${PROJECT_NAME}
    PRIVATE
    build.h
)
